--- a/frontend/app.html
+++ b/frontend/app.html
@@ -15,6 +15,14 @@
         <span id="currentAgency">AG-01 Torrevieja</span>
       </div>
       
+      <!-- Bouton Check-in principal -->
+      <div style="padding: 15px;">
+        <a href="/checkin.html" class="btn btn-primary" style="width: 100%; display: flex; align-items: center; justify-content: center; gap: 10px; padding: 15px; font-size: 16px; text-decoration: none;">
+          <span>✅</span>
+          <span>Nuevo Check-in</span>
+        </a>
+      </div>
+      
       <nav class="sidebar-nav">
         <button class="nav-item active" data-page="dashboard">
           <span>📊</span>
@@ -86,7 +94,6 @@
       <!-- Le contenu du modal sera injecté ici -->
     </div>
   </div>
-
   <script src="/js/translations.js"></script>
   <script src="/js/api.js"></script>
   <script src="/js/app.js"></script>
