--- a/frontend/app.html
+++ b/frontend/app.html
@@ -15,11 +15,15 @@
         <span id="currentAgency">AG-01 Torrevieja</span>
       </div>
       
-      <!-- Bouton Check-in principal -->
+      <!-- Boutons Check-in / Check-out -->
       <div style="padding: 15px;">
-        <a href="/checkin.html" class="btn btn-primary" style="width: 100%; display: flex; align-items: center; justify-content: center; gap: 10px; padding: 15px; font-size: 16px; text-decoration: none;">
+        <a href="/checkin.html" class="btn btn-primary" style="width: 100%; display: flex; align-items: center; justify-content: center; gap: 10px; padding: 15px; font-size: 16px; text-decoration: none; margin-bottom: 10px;">
           <span>✅</span>
           <span>Nuevo Check-in</span>
+        </a>
+        <a href="/checkout.html" class="btn" style="width: 100%; display: flex; align-items: center; justify-content: center; gap: 10px; padding: 15px; font-size: 16px; text-decoration: none; background: #6366f1; color: white;">
+          <span>🏁</span>
+          <span>Check-out</span>
         </a>
       </div>
       
