--- a/frontend/app.html
+++ b/frontend/app.html
@@ -32,6 +32,7 @@
         <button class="nav-item" data-page="customers"><span>👥</span> <span>Clientes</span></button>
         <button class="nav-item" data-page="cash"><span>💰</span> <span>Caja</span></button>
         <button class="nav-item" data-page="documents"><span>📄</span> <span>Documentos</span></button>
+        <button class="nav-item" data-page="maintenance"><span>🔧</span> <span>Mantenimiento</span></button>
         <button class="nav-item" data-page="settings"><span>⚙️</span> <span>Parámetros</span></button>
         <button class="nav-item" data-page="users" id="navUsers" style="display: none;"><span>👤</span> <span>Usuarios</span></button>
       </nav>
